--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
           <a
             href="https://afisha.yandex.ru/moscow/cinema/zvezdnye-voiny-epizod-9?schedule-date=2019-12-19"
             class="nav__link"
+            target="_blank"
             >Билеты</a
           >
           <a
             href="https://ru.wikipedia.org/wiki/Звёздные_войны:_Скайуокер._Восход"
             class="nav__link"
+            target="_blank"
             >О фильме</a
           >
           <a
             href="https://www.kinopoisk.ru/film/718222/video/"
             class="nav__link"
+            target="_blank"
             >Трейлеры</a
           >
           <a href="#" class="nav__link">Отзывы</a>
@@ -70,7 +73,14 @@
             <div class="slider__item">
               <img src="img/Rectangle1.png" alt="" class="slider__image" />
               <div class="slider__year">1977</div>
-              <h3 class="slider__title">Эпизод IV: <br />Новая надежда</h3>
+              <h3 class="slider__title">
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/333/"
+                  target="_blank"
+                  >Эпизод IV: <br />Новая надежда</a
+                >
+              </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
                 <span class="slider__rating-stars">
@@ -86,7 +96,12 @@
               <img src="img/Rectangle2.png" alt="" class="slider__image" />
               <div class="slider__year">1980</div>
               <h3 class="slider__title">
-                Эпизод V: <br />Империя наносит ответный удар
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-epizod-5-imperiya-nanosit-otvetnyy-udar-1980-338/"
+                  target="_blank"
+                  >Эпизод V: <br />Империя наносит ответный удар</a
+                >
               </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
@@ -102,7 +117,14 @@
             <div class="slider__item">
               <img src="img/Rectangle3.png" alt="" class="slider__image" />
               <div class="slider__year">1983</div>
-              <h3 class="slider__title">Эпизод VI: <br />Возвращение джедая</h3>
+              <h3 class="slider__title">
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-epizod-6-vozvrashhenie-dzhedaya-1983-447/"
+                  target="_blank"
+                  >Эпизод VI: <br />Возвращение джедая</a
+                >
+              </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
                 <span class="slider__rating-stars">
@@ -117,7 +139,14 @@
             <div class="slider__item">
               <img src="img/Rectangle4.png" alt="" class="slider__image" />
               <div class="slider__year">1999</div>
-              <h3 class="slider__title">Эпизод I: <br />Скрытая угроза</h3>
+              <h3 class="slider__title">
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/6695/"
+                  target="_blank"
+                  >Эпизод I: <br />Скрытая угроза</a
+                >
+              </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
                 <span class="slider__rating-stars">
@@ -132,7 +161,14 @@
             <div class="slider__item">
               <img src="img/Rectangle5.png" alt="" class="slider__image" />
               <div class="slider__year">2002</div>
-              <h3 class="slider__title">Эпизод II: <br />Атака клонов</h3>
+              <h3 class="slider__title">
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-epizod-2-ataka-klonov-2002-844/"
+                  target="_blank"
+                  >Эпизод II: <br />Атака клонов</a
+                >
+              </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
                 <span class="slider__rating-stars">
@@ -147,7 +183,14 @@
             <div class="slider__item">
               <img src="img/Rectangle6.png" alt="" class="slider__image" />
               <div class="slider__year">2005</div>
-              <h3 class="slider__title">Эпизод III: <br />Месть ситхов</h3>
+              <h3 class="slider__title">
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-epizod-3-mest-sitkhov-2005-5619/"
+                  target="_blank"
+                  >Эпизод III: <br />Месть ситхов</a
+                >
+              </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
                 <span class="slider__rating-stars">
@@ -163,7 +206,12 @@
               <img src="img/Rectangle7.png" alt="" class="slider__image" />
               <div class="slider__year">2015</div>
               <h3 class="slider__title">
-                Звёздные войны: <br />Пробуждение Силы
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-probuzhdenie-sily-2015-714888/"
+                  target="_blank"
+                  >Звёздные войны: <br />Пробуждение Силы</a
+                >
               </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
@@ -180,7 +228,12 @@
               <img src="img/Rectangle8.png" alt="" class="slider__image" />
               <div class="slider__year">2017</div>
               <h3 class="slider__title">
-                Звёздные войны: <br />Последние джедаи
+                <a
+                  class="slider__href"
+                  href="https://www.kinopoisk.ru/film/zvyozdnye-voyny-poslednie-dzhedai-2017-718223/"
+                  target="_blank"
+                  >Звёздные войны: <br />Последние джедаи</a
+                >
               </h3>
               <div class="slider__rating">
                 <span class="slider__rating-label">Рейтинг</span>
